--- a/desafio3/package.json
+++ b/desafio3/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/MarciaDiaz/Tienda.Diaz#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "express": "^4.18.2"
   }
 }
