--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -14,12 +15,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MarciaDiaz/Tienda.Diaz/issues"
-  },
-  "homepage": "https://github.com/MarciaDiaz/Tienda.Diaz#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "express-handlebars": "^6.0.6",
+    "handlebars": "^4.7.7",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20",
+    "pug": "^3.0.2"
   }
 }
